--- a/dubbo-provider/pom.xml
+++ b/dubbo-provider/pom.xml
@@ -8,8 +8,7 @@
     <version>0.0.1-SNAPSHOT</version>
 
     <name>dubbo-provider</name>
-    <description>Spring Cloud Dubbo Provider for Spring Cloud Alibaba</description>
-
+    <description>Spring Cloud Dubbo Provider for Spring Cloud Alibaba</description>ub
     <parent>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-alibaba-demo-beijing-20190526</artifactId>
